--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,19 @@ dependencies {
     //Gson
     implementation 'com.google.code.gson:gson:2.8.8'
 
+    // Unit Testing
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
+
+    // Hamcrest Lib
+    androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
+
+    // Espresso UI Testing
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // UI Automator
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
